# com-impl-rs

./: Cargo.toml  README.md
com-impl-macro/: Cargo.toml
com-impl-macro/src/: lib.rs
src/: lib.rs
tests/: factory.rs
